--- a/outline.org
+++ b/outline.org
@@ -1187,8 +1187,8 @@
 * Discussion
   The main finding was that developed METT-test showed good
   reliability.  Test-retest scores correlations indicated a good test
-  reliaiblity. Additionally split-half reliability also showed good
-  reliability.
+  reliaiblity. Additionally the split-half reliability found were
+  good.
 
   The test however, did not avoid the avoid the common ceiling
   effects for happiness. A majority ($72.83\%$) of participants
