--- a/outline.org
+++ b/outline.org
@@ -1100,7 +1100,7 @@
        2. Functional: The system shall display a backward-mask
        3. Functional: The system shall display a target-image
        4. Functional: The system shall display times shall be precise within  \SI{1/60}{\second}
-       5. Functional: The system shall collect selected emotion input via the keyboard.
+       5. Functional: The system shall collect input indicating the selected emotion via the keyboard.
        6. Functional: The system shall perform the same number of trials for each participant.
        7. Functional: The system shall allow for the configuration of stimulus sets.
     2. Requirements pertaining to the SPEC-test
