--- a/outline.org
+++ b/outline.org
@@ -172,7 +172,7 @@
    expression, regulation and, utilization. Thereby defining the
    boundaries of the subject.
 
-   Furthermore, \citet{Salovey1990} argue that people exhibiting the
+   Furthermore, \citet{Salovey1990} argue that people possessing the
    four abilities may show more adaptive behaviors in social
    situations. This was later expanded in
    \citet{Brackett2006}. Conversely, people exhibiting deficits in
