--- a/outline.org
+++ b/outline.org
@@ -929,7 +929,7 @@
    Participation in the study was entirely voluntary, and participants
    signed informed concent forms prior to participating in the
    study. No identifying information was collected during the course
-   of the study. As the study was performed persuant to a Master's
+   of the study. Additionally, as the study was performed persuant to a Master's
    degree the study was not submited for external ethical review.
 
 
